--- a/src/components/SearchControls/searchControls.css
+++ b/src/components/SearchControls/searchControls.css
@@ -1,15 +1,70 @@
+.options-container{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
 .search-controls-container {
     display: flex;
 }
 
 .search-controls-title {
-    margin: 0;
+    margin: 0 0 5px 0;
 }
 
-.search-control {
+.search-bar {
     border: 1px solid white;
     background-color: transparent;
     height: 40px;
     width: 25vw;
     padding: 10px;
+    margin-right: 10px;
+    font-family: 'Lekton';
+    color: white;
+}
+
+.search-bar:focus-visible {
+    outline: none;
+    background-color:rgba(255, 255, 255, 0.1);
+    
+}
+
+.sort-options{
+    font-size: 0.8rem;
+    display: flex;
+}
+
+.sort-options>div {
+    border: 1px solid white;
+    height: 40px;
+    padding: 10px 10px 10px 10px;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-items: center;
+    width: 60px;
+    cursor: pointer;
+    user-select: none;
+}
+
+.sort-options>div:first-child{
+    margin-left: 0;
+    width: fit-content;
+}
+
+.sort-options img {
+    height: 100%;
+}
+
+.sort-active {
+    background-color:rgba(255, 255, 255, 0.1);;
+}
+
+.invert {
+    transform: rotate(180deg);
+}
+
+.sort-options span {
+    height: 65%;
 }
