--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,17 @@
   margin: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   margin: 3vw 3vw;
   height: calc(100vh - 6vw);
+}
+
+header {
+  height: 15vh;
 }
 
 body {
@@ -14,8 +22,9 @@ body {
 }
 
 .logo {
-  font-size: 3vw;
-  line-height: 1;
+  font-size: 4vw;
+  line-height: 0.5;
+  user-select: none;
 }
 
 /* Scroll bar */
@@ -42,4 +51,21 @@ body {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: rgba(255, 255, 255, 1);
+}
+
+@media only screen and (max-width: 600px){
+  header{
+    height: 30vh;
+  }
+
+  .logo {
+    font-size: 3rem;
+    line-height: 1;
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+  header{
+    height: 22vh;
+  }
 }
