--- a/src/components/ArtList/artList.css
+++ b/src/components/ArtList/artList.css
@@ -15,7 +15,7 @@
 }
  */
 .art-list {
-    margin-top: 10px;
+    margin-top: 20px;
     line-height: 2;
     -webkit-column-count: 3;
     -webkit-column-gap: 10px;
@@ -23,13 +23,18 @@
     -moz-column-gap: 10px;
     column-count: 3;
     column-gap: 10px;
+    width: 100%;
+    min-height: 75vh;
+   
 }
+
 
 .art-image {
     cursor: pointer;
     position: relative;
     width: 100% !important;
     height: auto !important;
+    user-select: none;
 }
 
 .floating-caption {
@@ -42,17 +47,37 @@
     padding: 5px 8px;
     margin-right: 20px;
     z-index: 10;
+    left: 0;
+    top: 0;
+}
+
+.loading-icon {
+    width: 60px;
+}
+
+.center {
+    position: absolute;
+    top: calc(50% + 10vh);
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
 .bold {
     font-weight: bold;
 }
 .page-navigator {
+    position: relative;
+    bottom: 0;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    margin-top: 10px;
+    padding: 20px 0 0 0;
+    user-select: none;
+}
+
+.page-navigator:last-child{
+    padding-bottom: 20px;
 }
 .current-page {
     border: 1px solid white;
@@ -73,4 +98,81 @@
 
 .disabled:hover {
     background-color: transparent;
+}
+
+.disabled {
+    cursor: default;
+}
+
+@media only screen and (max-width: 600px) {
+    .art-list {
+        position: relative;
+        left: -3vw;
+        width: calc(100% + 6vw + 2px);
+        -webkit-column-count: 1;
+        -moz-column-count: 1;
+        column-count: 1;
+        transform: translateX(-1px);
+        min-height: 65vh;
+    }
+
+    .page-arrow {
+        width: 10vw;
+    }
+
+    .art-object{
+        border: 1px solid white;
+        border-top: 0;        
+        margin-bottom: 15px;
+    }
+
+    .floating-caption {
+        position: static;
+        line-height: 1.2;
+        border: none;
+        padding: 0 10px 10px 10px;
+        margin: 0;
+        max-width: 100%;
+    }
+
+    .floating-caption.hide {
+        display: inline-block;
+    }
+
+    .art-image {
+        width: calc(100% + 1px);
+    }
+
+    .page-navigator{
+        padding: 30px 0 0 0;
+    }
+}
+
+
+@media only screen and (min-width: 601px) and (max-width: 1024px){
+    .art-object{
+        border: 1px solid white;  
+        margin-bottom: 15px;
+    }
+    .art-list {
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        column-count: 2;
+    }
+    .floating-caption {
+        position: static;
+        line-height: 1.2;
+        border: none;
+        padding: 0 10px 10px 10px;
+        margin: 0;
+        max-width: 100%;
+    }
+
+    .floating-caption.hide {
+        display: block;
+    }
+
+    .page-arrow {
+        width: 5vw;
+    }
 }
