--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 
 html {
   scroll-behavior: smooth;
+  font-size: 12pt;
 }
 
 :root {
@@ -13,7 +14,9 @@ html {
 }
 
 header {
-  height: 15vh;
+  display: flex;
+  justify-content: space-between;
+  /* align-items: flex-start; */
 }
 
 body {
@@ -22,9 +25,55 @@ body {
 }
 
 .logo {
-  font-size: 4vw;
-  line-height: 0.5;
+  font-size: 3rem;
   user-select: none;
+}
+
+.about {
+  position: relative;
+  border: 1px solid white;
+  display: flex;
+  width: 2.4rem;
+  height: 2.4rem;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.8rem;
+  user-select: none;
+  top:0.5rem
+}
+
+.about:hover {
+  background: rgba(255, 255, 255, 0.1);
+  cursor: help;
+}
+
+.about>span{
+  display: block;
+  width: 100%;
+  height: 100%;
+  transform: translateY(2px);
+  text-align: center;
+}
+
+.about-text {
+  position: absolute;
+  font-size: 1rem;
+  background-color: rgba(73, 85, 82, 1);
+  border: 1px solid white;
+  top: -1px;
+  right: 100%;
+  padding: 7px 10px;
+  min-width: 30vw;
+  width: fit-content;
+  z-index: 11;
+}
+
+.about-text>p:first-child{
+  margin-bottom: 5px;
+}
+
+.about-exit {
+  display: none;
 }
 
 /* Scroll bar */
@@ -55,17 +104,46 @@ body {
 
 @media only screen and (max-width: 600px){
   header{
-    height: 32vh;
+    height: fit-content;
   }
 
   .logo {
     font-size: 3rem;
     line-height: 1;
   }
+  
+  .about>span{
+    transform: translateY(2px);
+  }
+  
+  .about-text {
+    position: absolute;
+    top: 100%;
+    right : -1px;
+    width: 80vw;
+  }
+  
+  .about-text>p:first-child{
+    margin-bottom: 5px;
+  }
+
+  .about-exit{
+    display: flex;
+    border: 1px solid white;
+    justify-content: center;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 4px;
+  }
+  .about-exit:active{
+    background: rgba(255, 255, 255, 0.1);
+  }
+
+  .about:hover {
+    background: transparent
+  }
 }
 
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
-  header{
-    height: 22vh;
-  }
+
 }
