--- a/src/components/ArtList/artList.css
+++ b/src/components/ArtList/artList.css
@@ -24,7 +24,7 @@
     column-count: 3;
     column-gap: 10px;
     width: 100%;
-    min-height: 75vh;
+    /* min-height: 75vh; */
    
 }
 
@@ -104,7 +104,7 @@
     cursor: default;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
     .art-list {
         position: relative;
         left: -3vw;
@@ -113,7 +113,7 @@
         -moz-column-count: 1;
         column-count: 1;
         transform: translateX(-1px);
-        min-height: 65vh;
+        /* min-height: 65vh; */
     }
 
     .page-arrow {
@@ -142,14 +142,10 @@
     .art-image {
         width: calc(100% + 1px);
     }
-
-    .page-navigator{
-        padding: 30px 0 0 0;
-    }
 }
 
 
-@media only screen and (min-width: 601px) and (max-width: 1024px){
+@media only screen and (min-width: 701px) and (max-width: 1024px){
     .art-object{
         border: 1px solid white;  
         margin-bottom: 15px;
