--- a/src/components/ArtList/artList.css
+++ b/src/components/ArtList/artList.css
@@ -104,6 +104,17 @@
     cursor: default;
 }
 
+.page-results-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.results-count{
+    height: 100%;
+    user-select: none;
+}
+
 @media only screen and (max-width: 700px) {
     .art-list {
         position: relative;
